# Developer-Tutorial

AI/01_numpy/: 1-1_numpy_basic.py  1-2_numpy_caculate.py  1-3_numpy_speed_test.py
AI/02_scipy/: 1-1_scipy_basic.py
AI/03_Initial/: 1-1_basic_module.py  1-2_multiple_line.py  1-3_future_line.py  1-4_future_line_last_week.py  1-5_future_line_last_week_train_and_test.py
AI/Getting Started with Deep Learning_files/: Getting Started with Deep Learning.html
AI/Object detection/: Object detection.html  Object detection.ipynb
Bootloader/doc/: config.txt
C++/.metadata/: version.ini
C++/06_Dl/: libempty.cpp
C++/06_Dl/UniqueAndStaticVar/gateway/: .cproject  .project  CMakeLists.txt  unique_test.json
C++/06_Dl/UniqueAndStaticVar/gateway/src/: main.cpp
C++/06_Dl/UniqueAndStaticVar/gatewaySDK/: .cproject  .project  CMakeLists.txt
C++/06_Dl/UniqueAndStaticVar/gatewaySDK/inc/gateway/: DynamicLoader.hpp  EventAPI.h  EventHandler.hpp  Gateway.hpp  Module.hpp  ModuleDefine.h  ParameterAPI.h  ParameterHandler.hpp
C++/06_Dl/UniqueAndStaticVar/gatewaySDK/src/: EventAPI.cpp  EventHandler.cpp  Gateway.cpp  Module.cpp  ParameterAPI.cpp  ParameterHandler.cpp
C++/06_Dl/UniqueAndStaticVar/libunique/: .cproject  .project  CMakeLists.txt
C++/06_Dl/UniqueAndStaticVar/libunique/inc/: UniqueVariable.hpp
C++/06_Dl/UniqueAndStaticVar/libunique/src/: UniqueVariable.cpp
C++/Test/: .cproject
Cloud/02_Bing/: bing.py
Design_Patterns/: Decorator.cpp
Framework/01_pjsua/: .cproject  .project
Framework/02_Mysql/: config.cfg  csv2mysql.py
Framework/03_sanic/: middleware.py  request.py  start.py
Framework/04_ZeroMQ/: client.py  server.py
Java/01_JNI/: Makefile  lajp_MsgQ.c  lajp_MsgQ.h
Linux/02_CMake/target_include_directories/foo/: CMakeLists.txt
Linux/02_CMake/target_include_directories/foo/src/: foo.c
Linux/03_Docbook/: run  test.html  test.xml
Linux/04_GPIO/: Makefile  gpio_test.c
Linux/06_DynamicLink/: liba.cpp  libb.cpp  main  main.cpp
Perl/01_Basic/: HelloWorld.pl
Python/01_Basic/: exception.py  type.py
Python/02_Tools/: ascii_gen.py  gui.py
Swift/Inheritance_01/: Assassin.swift  (+1 more)
(+1152 files in other folders)
